server/deploy/lab-ha/manifests/argocd-rollouts-metrics.yaml
apiVersion: v1
kind: Service
metadata:
  name: argocd-server-metrics
  namespace: argocd
  labels:
    release: kube-prometheus-stack
spec:
  selector:
    app.kubernetes.io/instance: argo-cd
    app.kubernetes.io/name: argocd-server
  ports:
    - name: metrics
      port: 8083
      targetPort: 8083
