server/deploy/lab-ha/manifests/platform-nodeports.yaml
apiVersion: v1
kind: Service
metadata:
  name: jaeger-nodeport
  namespace: monitoring
spec:
  type: NodePort
  selector:
    app.kubernetes.io/name: jaeger
  ports:
    - name: query
      port: 16686
      targetPort: query
      nodePort: 30686
---
apiVersion: v1
kind: Service
metadata:
  name: grafana-nodeport
  namespace: monitoring
spec:
  type: NodePort
  selector:
    app.kubernetes.io/instance: kube-prometheus-stack
    app.kubernetes.io/name: grafana
  ports:
    - name: http
      port: 80
      targetPort: 3000
      nodePort: 30081
---
apiVersion: v1
kind: Service
metadata:
  name: prometheus-nodeport
  namespace: monitoring
spec:
  type: NodePort
  selector:
    app.kubernetes.io/name: prometheus
    operator.prometheus.io/name: kube-prometheus-stack-prometheus
  ports:
    - name: http
      port: 9090
      targetPort: 9090
      nodePort: 30090
---
apiVersion: v1
kind: Service
metadata:
  name: alertmanager-nodeport
  namespace: monitoring
spec:
  type: NodePort
  selector:
    alertmanager: kube-prometheus-stack-alertmanager
    app.kubernetes.io/name: alertmanager
  ports:
    - name: http
      port: 9093
      targetPort: 9093
      nodePort: 30093
---
apiVersion: v1
kind: Service
metadata:
  name: alert-webhook-receiver-nodeport
  namespace: monitoring
spec:
  type: NodePort
  selector:
    app: alert-webhook-receiver
  ports:
    - name: http
      port: 8080
      targetPort: http
      nodePort: 30086
---
apiVersion: v1
kind: Service
metadata:
  name: argocd-server-nodeport
  namespace: argocd
spec:
  type: NodePort
  selector:
    app.kubernetes.io/instance: argo-cd
    app.kubernetes.io/name: argocd-server
  ports:
    - name: http
      port: 80
      targetPort: 8080
      nodePort: 30083
    - name: https
      port: 443
      targetPort: 8080
      nodePort: 30443
---
apiVersion: v1
kind: Service
metadata:
  name: longhorn-frontend-nodeport
  namespace: longhorn-system
spec:
  type: NodePort
  selector:
    app: longhorn-ui
  ports:
    - name: http
      port: 80
      targetPort: http
      nodePort: 30084
---
apiVersion: v1
kind: Service
metadata:
  name: hubble-ui-nodeport
  namespace: kube-system
spec:
  type: NodePort
  selector:
    k8s-app: hubble-ui
  ports:
    - name: http
      port: 80
      targetPort: 8081
      nodePort: 30085
---
apiVersion: v1
kind: Service
metadata:
  name: seaweedfs-filer-nodeport
  namespace: object-storage
spec:
  type: NodePort
  selector:
    app.kubernetes.io/component: filer
    app.kubernetes.io/instance: seaweedfs
    app.kubernetes.io/name: seaweedfs
  ports:
    - name: http
      port: 8888
      targetPort: 8888
      nodePort: 30888
